Commit al master del blog

--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,18 @@
 <html>
     <head>
         <title> Vamos Ingeniero</title>
+        <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <hi> Aqui vamos trasnochando por esa ing. :)</hi>
-        <p> y este mi primer codigo programado en html</p>
+        <div id="container">
+            <div id ="ing.">
+                <h1> Aqui vamos trasnochando por
+                esa ing. :)</h1>
+                <p1> Este mi primer codigo 
+                programado en html, estamos adelantando el curso
+                mas rapido que se pueda. No hay que parar ni olvidar 
+                el horizante a donde apuntamos todos los dias</p>
+            </div>
+        </div>
     </body>
-    
-
-
 </html>
