Estructura inicial de la cabecera

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                 Cabecera
+            </div>
             <div id ="ing.">
                 <h1> Aqui vamos trasnochando por
                 esa ing. :)</h1>
