Cabecera con fondo azul

--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,10 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                 Cabecera
+                 Hiperblog <span id="tangline">Tu blog de confianza
+                 </span>
             </div>
-            <div id ="ing.">
+            <div id ="post">
                 <h1> Aqui vamos trasnochando por
                 esa ing. :)</h1>
                 <p1> Este mi primer codigo 
