--- a/blog.html
+++ b/blog.html
@@ -5,13 +5,23 @@
     </head>
     <body>
         <div id="container">
-            <div id ="ing.">
+            <div id="cabecera">
+                 Hiperblog <span id="tangline">Tu blog de confianza
+                 </span>
+            </div>
+            <div id ="post">
                 <h1> Aqui vamos trasnochando por
                 esa ing. :)</h1>
                 <p1> Este mi primer codigo 
                 programado en html, estamos adelantando el curso
                 mas rapido que se pueda. No hay que parar ni olvidar 
                 el horizante a donde apuntamos todos los dias</p>
+                <p>OpenAI is an American artificial intelligence
+                research laboratory consisting of the non-profit
+                OpenAI Incorporated and its for-profit subsidiary
+                corporation OpenAI Limited Partnership. OpenAI
+                conducts AI research with the declared intention 
+                of promoting and developing a friendly AI.</p>
             </div>
         </div>
     </body>
