cambio de titulo
porque puedo

Signed-off-by: Jaiber Diaz <118369577+Djaiber@users.noreply.github.com>

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                 Hiperblog <span id="tangline">Tu blog de confianza
+                 Hiperblog <span id="tangline">Tu blog de tecnologia
                  </span>
             </div>
             <div id ="post">
